M  ../../assets/scss/custom.scss M  config.yaml M  menus.yaml M  ../../content/authors/john-s.-allen/_index.md M  ../../content/authors/joseph-j.-brown/_index.md D  ../../content/event/_index.md D  ../../content/event/example/featured.jpg D  ../../content/event/example/index.md A  ../../content/home/mission.md M  ../../content/home/team.md D  ../../content/post/20-12-01-wowchemy-prize/featured.jpg D  ../../content/post/20-12-01-wowchemy-prize/index.md D  ../../content/post/20-12-02-ICML-best-paper/featured.jpg D  ../../content/post/20-12-02-ICML-best-paper/index.md A  ../../content/post/22-02-02-senate-member/index.md M  ../../content/post/_index.md A  ../../layouts/index.rss.xml A  ../../layouts/maintenance/list.html A  ../../layouts/partials/book_layout.html A  ../../layouts/partials/hooks/footer.html A  ../../layouts/partials/maintenance-pages-table.html A  ../../layouts/partials/page_author.html A  ../../layouts/partials/site_footer.html A  ../../layouts/shortcodes/asciicast.html A  ../../layouts/shortcodes/chroma-lexers.html A  ../../layouts/shortcodes/code.html A  ../../layouts/shortcodes/datatable-filtered.html A  ../../layouts/shortcodes/datatable.html A  ../../layouts/shortcodes/directoryindex.html A  ../../layouts/shortcodes/docfile.html A  ../../layouts/shortcodes/exfile.html A  ../../layouts/shortcodes/exfm.html A  ../../layouts/shortcodes/gallery-enhance.html A  ../../layouts/shortcodes/gh.html A  ../../layouts/shortcodes/ghrepo.html A  ../../layouts/shortcodes/imgproc.html A  ../../layouts/shortcodes/nohighlight.html A  ../../layouts/shortcodes/note.html A  ../../layouts/shortcodes/output.html A  ../../layouts/shortcodes/readfile.html A  ../../layouts/shortcodes/tip.html A  ../../layouts/shortcodes/todo.html A  ../../layouts/shortcodes/warning.html A  ../../layouts/shortcodes/youtube-enhance.html

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@
 
 title: CoE Faculty Senate # Website name
 baseurl: "http://www2.hawaii.edu/~coesec/" # Website URL
-copyright: '&copy; 2022 Faculty Senate Charter, College of Engineering, University of Hawaii at Manoa' # Footer text, e.g. '© {year} Me'
+copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
